# dbatools

./: .gitignore  CMakeLists.txt  README.md  api_spec.json  apimanager.cpp  apimanager.h  config.ini.example  dbatools.code-workspace  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  roleeditor.cpp  roleeditor.h  rolemanager.cpp  rolemanager.h  stringformatter.cpp  stringformatter.h  usereditor.cpp  usereditor.h  usermanager.cpp  usermanager.h
api/: .env  main.py
scripts/: BUILD_STATUS.md  COMPILE_STATUS.md  README.md  build-mingw.ps1  build-qt.ps1  build.bat  build.txt  configure-mingw.ps1  init-vs-env.bat  install-qt.bat  run-debug.ps1  run-mingw.ps1  run-qt.ps1  run.bat  setup-vs-env.bat  setup-vs-env.ps1  start-api.bat  start-docker.bat  test-api.bat  test-build.ps1
src/: apimanager.cpp  apimanager.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  stringformatter.cpp  stringformatter.h
